package logic.item;

public abstract class Item {
	public abstract int getLevel();
    public abstract void effect();
}
